# fyp-moovita

./: .gitignore  OpenHouseScript.md  README.md  circle_road_gen.py  requirements  requirements.sh  requirements.txt  ros-kinetic-desktop-full-install.sh  waypoints.csv
LaneNetROS/: CMakeLists.txt
LaneNetROS/launch/: lanenet.launch
LaneNetROS/model/: README.md
LaneNetROS/node/: curve_fitting.cpp
LaneNetROS/scripts/: lanenet_node.py
LaneNetRos/scripts/: lanenet_node.py
launches/: CMakeLists.txt  package.xml
launches/launch/: ngeeann_av.launch
ngeeann_av/: CMakeLists.txt
ngeeann_av_control/: CMakeLists.txt  package.xml
ngeeann_av_control/config/: ackermann_params.yaml  controller.yaml
ngeeann_av_control/launch/: ackermann_controller.launch  ackermann_vehicle.launch  controller.launch  road_drive.launch
ngeeann_av_control/nodes/: ackermann_controller (copy).py  ackermann_controller.py  ackermann_teleop.py  listener.py  talker.py
ngeeann_av_description/: CMakeLists.txt  package.xml
ngeeann_av_description/config/: ackerman_params.yaml  controller.yaml
ngeeann_av_description/launch/: ackermann_control.launch  controller.launch  display.launch  gazebo.launch  odom.launch  road.launch  road_display.launch  road_drive.launch  urdf.rviz
ngeeann_av_description/meshes/: l_steer_1.stl  r_steer_1.stl  spoiler.stl
ngeeann_av_description/nodes/: odom.py
ngeeann_av_gazebo/: CMakeLists.txt  package.xml
ngeeann_av_nav/: CMakeLists.txt  package.xml  setup.py
scripts/: circle_road_gen.py  circle_wp_gen.py  traffic.csv  waypoint_gen.py  waypoints.csv
(+60 files in other folders)
